--- a/portfolio.html
+++ b/portfolio.html
@@ -5,7 +5,7 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Portfolio</title>
-
+                <link href="css/modern-normalize.css" rel="stylesheet" />
 		<link href="css/style.css" rel="stylesheet" />
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
